--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -76,6 +76,7 @@ jobs:
             --from-literal=AWS_SECRET_ACCESS_KEY=${{ github.event.inputs.aws-secret-access-key }} \
             --from-literal=UPLOAD_SERVICE_URL=${{ secrets.UPLOAD_SERVICE_URL }} \
             --from-literal=VIDEO_SERVICE_URL=${{ secrets.VIDEO_SERVICE_URL }} \
+            --from-literal=AWS_COGNITO_DOMAIN=${{ secrets.AWS_COGNITO_DOMAIN }} \            
             --dry-run=client -o yaml | kubectl apply -f -
       
       - name: Deploy to Kubernetes
